--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,51 +50,51 @@ jobs:
             --template-file main.bicep \
             --parameters adfName=komatsu-test-poc
 
-      - name: Extract Pipeline Order from JSON
-        id: get_pipeline_order
-        run: |
-          PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependencies.json)
-          echo "PIPELINES=$PIPELINES" >> $GITHUB_ENV
-          echo $PIPELINES
+      # - name: Extract Pipeline Order from JSON
+      #   id: get_pipeline_order
+      #   run: |
+      #     PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependencies.json)
+      #     echo "PIPELINES=$PIPELINES" >> $GITHUB_ENV
+      #     echo $PIPELINES
       
-      - name: Deploy Pipelines in Order
-        run: |
-          pipelines="$PIPELINES"  # Replace with the actual environment variable or input containing the dependency JSON
-          deployed=()
+      # - name: Deploy Pipelines in Order
+      #   run: |
+      #     pipelines="$PIPELINES"  # Replace with the actual environment variable or input containing the dependency JSON
+      #     deployed=()
       
-          # Function to deploy a pipeline recursively, ensuring dependencies are deployed first
-          deploy_pipeline() {
-            local pipeline=$1
-            if [[ " ${deployed[@]} " =~ " $pipeline " ]]; then
-              echo "$pipeline already deployed."
-              return
-            fi
-            # Deploy dependencies first
-            for dep in $(echo $pipelines | jq -r ".[\"$pipeline\"].dependsOn[]"); do
-              deploy_pipeline $dep
-            done
-            echo "Deploying Pipeline: $pipeline..."
+      #     # Function to deploy a pipeline recursively, ensuring dependencies are deployed first
+      #     deploy_pipeline() {
+      #       local pipeline=$1
+      #       if [[ " ${deployed[@]} " =~ " $pipeline " ]]; then
+      #         echo "$pipeline already deployed."
+      #         return
+      #       fi
+      #       # Deploy dependencies first
+      #       for dep in $(echo $pipelines | jq -r ".[\"$pipeline\"].dependsOn[]"); do
+      #         deploy_pipeline $dep
+      #       done
+      #       echo "Deploying Pipeline: $pipeline..."
             
-            # Get the pipeline name from the JSON file (ensure it’s correctly extracted)
-            pipeline_name=$(jq -r '.name' "pipeline/$pipeline.json")
+      #       # Get the pipeline name from the JSON file (ensure it’s correctly extracted)
+      #       pipeline_name=$(jq -r '.name' "pipeline/$pipeline.json")
             
-            # Make sure that $pipeline_name is not empty
-            if [ -z "$pipeline_name" ]; then
-              echo "Error: Pipeline name is missing in pipeline/$pipeline.json"
-              exit 1
-            fi
+      #       # Make sure that $pipeline_name is not empty
+      #       if [ -z "$pipeline_name" ]; then
+      #         echo "Error: Pipeline name is missing in pipeline/$pipeline.json"
+      #         exit 1
+      #       fi
       
-            # Deploy the pipeline using the az datafactory command with the --name argument
-            az datafactory pipeline create --factory-name komatsu-test-poc --resource-group komatsu-poc \
-              --name "$pipeline_name" --template-file ./bicep/modules/pipeline.bicep "pipeline/$pipeline.json"
+      #       # Deploy the pipeline using the az datafactory command with the --name argument
+      #       az datafactory pipeline create --factory-name komatsu-test-poc --resource-group komatsu-poc \
+      #         --name "$pipeline_name" --template-file ./bicep/modules/pipeline.bicep "pipeline/$pipeline.json"
             
-            deployed+=("$pipeline")
-          }
+      #       deployed+=("$pipeline")
+      #     }
       
-          # Loop through the pipelines and deploy each one, respecting dependencies
-          for pipeline in $(echo $pipelines | jq -r 'keys[]'); do
-            deploy_pipeline $pipeline
-          done
+      #     # Loop through the pipelines and deploy each one, respecting dependencies
+      #     for pipeline in $(echo $pipelines | jq -r 'keys[]'); do
+      #       deploy_pipeline $pipeline
+      #     done
         
 
 
